[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_delete_file_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://src/file_manager/game_file_load_dialog/font_preset_save_file_element_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_delete_file_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://src/file_manager/game_file_load_dialog/font_preset_save_file_element_info_label_value.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_delete_file_focus.tres" type="StyleBox" id=6]
[ext_resource path="res://src/file_manager/game_file_load_dialog/font_preset_delete_file_element_button.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/file_manager/game_file_load_dialog/font_preset_save_file_element_info_label_key.tres" type="DynamicFont" id=8]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_delete_file_normal.tres" type="StyleBox" id=9]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_save_file_focus.tres" type="StyleBox" id=10]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_save_file_pressed.tres" type="StyleBox" id=11]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_save_file_normal.tres" type="StyleBox" id=12]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_line_file_element_separator.tres" type="StyleBox" id=13]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_file_disabled.tres" type="StyleBox" id=14]
[ext_resource path="res://src/file_manager/game_file_load_dialog/style_preset_button_save_file_hover.tres" type="StyleBox" id=15]
[ext_resource path="res://src/file_manager/game_file_load_dialog/save_file_ui_element.gd" type="Script" id=16]

[node name="SaveFileElement" type="MarginContainer"]
margin_right = 890.0
margin_bottom = 125.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5
script = ExtResource( 16 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_right = 895.0
margin_bottom = 149.0

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 890.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
mouse_filter = 2
size_flags_horizontal = 5
custom_constants/separation = 15

[node name="LoadSaveButton" type="Button" parent="VBox/HBox"]
margin_top = 12.0
margin_right = 250.0
margin_bottom = 112.0
rect_min_size = Vector2( 250, 100 )
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 14 )
custom_styles/normal = ExtResource( 12 )
text = "SAVE FILE"
icon_align = 1

[node name="TextureRect" type="TextureRect" parent="VBox/HBox"]
visible = false
margin_top = 25.0
margin_right = 75.0
margin_bottom = 100.0
rect_min_size = Vector2( 75, 75 )
mouse_filter = 2
size_flags_vertical = 4
expand = true
stretch_mode = 5

[node name="FileInfoContainer" type="VBoxContainer" parent="VBox/HBox"]
margin_left = 265.0
margin_right = 750.0
margin_bottom = 125.0
rect_min_size = Vector2( 485, 0 )
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="FileInfo" type="HBoxContainer" parent="VBox/HBox/FileInfoContainer"]
visible = false
margin_top = 50.0
margin_right = 340.0
margin_bottom = 75.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="Key" type="Label" parent="VBox/HBox/FileInfoContainer/FileInfo"]
margin_right = 150.0
margin_bottom = 25.0
rect_min_size = Vector2( 125, 15 )
custom_fonts/font = ExtResource( 8 )
text = "Total Playtime:"
align = 2
valign = 1

[node name="Value" type="Label" parent="VBox/HBox/FileInfoContainer/FileInfo"]
margin_left = 165.0
margin_top = 2.0
margin_right = 447.0
margin_bottom = 23.0
rect_min_size = Vector2( 25, 15 )
size_flags_horizontal = 8
custom_fonts/font = ExtResource( 5 )
text = "0 hours, 0 minutes, 0 seconds"
valign = 1

[node name="DeleteSaveButton" type="Button" parent="VBox/HBox"]
margin_left = 765.0
margin_top = 50.0
margin_right = 890.0
margin_bottom = 75.0
rect_min_size = Vector2( 125, 25 )
focus_neighbour_left = NodePath("../LoadSaveButton")
size_flags_horizontal = 9
size_flags_vertical = 4
size_flags_stretch_ratio = 0.1
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 14 )
custom_styles/normal = ExtResource( 9 )
text = "DELETE FILE"
icon_align = 1

[node name="FileElementSeparator" type="HSeparator" parent="VBox"]
margin_top = 129.0
margin_right = 890.0
margin_bottom = 149.0
custom_constants/separation = 20
custom_styles/separator = ExtResource( 13 )

[connection signal="pressed" from="VBox/HBox/LoadSaveButton" to="." method="_on_load_save_button_pressed"]
[connection signal="pressed" from="VBox/HBox/DeleteSaveButton" to="." method="_on_delete_save_button_pressed"]
